@startuml "Отношения сущностей"

entity User  {
  + id (PK)
  --
  login
  password
  balance
}

entity Transactions  {
  + OrderId (PK)
  --
  # user id (FK)
  date
  summ
  action
  status
}

map "map: ActionList<Integer, String>" as TransactionAction {
 1 => Withdraw
 2 => Debit
}

map "map: StatusList<Integer, String>" as TransactionStatus {
 1 => NEW
 2 => PROCESSING
 3 => INVALID
 4 => PROCESSED
}

User::id -right-o{ Transactions::user
Transactions::action --> TransactionAction
Transactions::status --> TransactionStatus
  
@enduml